--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru-RU">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style/main.css">
   <title>Бургер!</title>
 </head>
