correcting small bugs

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </div>
               
               <div class="main__scroll">
-                <a href="#" class="scroll-btn"></a>
+                <a href="#" class="scroll-btn menu" data-id="1"></a>
               </div>
             </div>
           
@@ -217,7 +217,7 @@
                         <div class="slider__footer">
                           <span class="slider__price">500</span> рублей
                         </div>
-                        <button class="order-button slider__order-button">Заказать</button>
+                        <button class="order-button slider__order-button menu" data-id="6">Заказать</button>
                       </div>
                     </div>
                   </li>
@@ -289,7 +289,7 @@
                         <div class="slider__footer">
                           <span class="slider__price">500</span> рублей
                         </div>
-                        <button class="order-button slider__order-button">Заказать</button>
+                        <button class="order-button slider__order-button menu" data-id="6">Заказать</button>
                       </div>
                     </div>
                   </li>
@@ -361,7 +361,7 @@
                         <div class="slider__footer">
                           <span class="slider__price">500</span> рублей
                         </div>
-                        <button class="order-button slider__order-button">Заказать</button>
+                        <button class="order-button slider__order-button" data-id="6">Заказать</button>
                       </div>
                     </div>
                   </li>
